fixed css bug where adding too much activities would cut out some from the screen

--- a/src/styles/components/_Activities.scss
+++ b/src/styles/components/_Activities.scss
@@ -37,27 +37,27 @@
 }
 
 .activities__list{
-    width: 90%;
+    max-height: 50vh;
+    width: 93%;
     height: 80%;
     border-radius: 15px;
     background-color: rgba(12,41,41,0.3);
-    margin-bottom: 13px;
+    // margin-bottom: 13px;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: auto;
 }
 
 .activities__list-items {
-    height: 90%;
+    // height: 10vh;
+    height: 50vh;
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-}
-
-.activities__list-items{
     overflow-y: auto;
     overflow-x: hidden;
 }
+
 
 .activities__list-items-item p{
     font-family: "Oxygen";
